# shikoko

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pypi.yml
docs/: annotations.md  troubleshooting.md  type-mapping.md  usage.md
example/: .env.example  README.md  ci_demo.sh  demo-compose.yml  docker-compose.yml
example/app/: .env.example  Dockerfile  main.py  pyproject.toml  sql_generated.py
example/app/db/migrations/: 001_init.sql  002_ enu_verify.sql
example/app/migrations/: 001_init.sql
example/app/orders/: sql_generated.py
example/app/orders/sql/: list_orders_by_payment.sql  list_orders_by_status.sql  update_order_status.sql
example/app/sql/: create_user.sql  list_posts_by_user.sql  list_users.sql
example/app/users/: sql_generated.py
example/app/users/sql/: delete_user.sql  find_user_by_email.sql
example/docker/postgres/: Dockerfile  postgresql.conf
src/pysquirrel/: __init__.py  __main__.py  check.py  cli.py  config.py  discovery.py  errors.py  parser.py
src/pysquirrel/codegen/: render.py
src/pysquirrel/introspect/: connection.py  nullability.py  plan.py  prepare.py
src/pysquirrel/types/: enums.py  oid_map.py
src/shikoko/: __init__.py  __main__.py  check.py  cli.py  config.py  errors.py  parser.py
src/shikoko/codegen/: format.py  ir.py  naming.py  render.py
src/shikoko/introspect/: __init__.py  catalog.py  connection.py  nullability.py  plan.py  prepare.py
src/shikoko/types/: enums.py  oid_map.py  types.py
tests/: conftest.py
tests/fixtures/queries/: create_user.sql  find_user.sql  list_users.sql
tests/fixtures/queries/nullability/: computed.sql  computed_with_override.sql  cte_left_join.sql  full_join.sql  inner_join.sql  left_join.sql  no_join.sql  override_bang.sql  override_bang_left_join.sql  override_qmark_coalesce.sql  right_join.sql  union_all_mixed.sql
tests/fixtures/schemas/: test_schema.sql
tests/integration/: test_connection.py  test_end_to_end.py  test_explain.py  test_nullability.py  test_prepare.py  test_types.py
tests/unit/: test_check.py  test_config.py  test_connection.py  test_discovery.py  test_errors.py  test_naming.py  test_nullability.py  test_oid_map.py  test_parser.py  test_plan_parsing.py  test_plan_walker.py  test_prepare.py  test_render.py
