[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysquirrel"
version = "0.1.0"
description = "Type-safe Python code generator for PostgreSQL queries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tsegaw Gashaw" },
]
keywords = ["postgres", "sql", "codegen", "asyncpg", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "asyncpg >= 0.29",
    "pydantic >= 2.6",
    "typer >= 0.12",
]

[project.optional-dependencies]
dev = [
    "ruff >= 0.4",
    "pytest >= 8.0",
    "pytest-asyncio >= 0.23",
    "testcontainers[postgres] >= 4.0",
    "syrupy >= 4.6",
    "mypy >= 1.9",
    "pyright >= 1.1",
]

[project.scripts]
pysquirrel = "pysquirrel.cli:main"

[project.urls]
Homepage = "https://github.com/tsegaw/pysquirrel"
Repository = "https://github.com/tsegaw/pysquirrel"
Issues = "https://github.com/tsegaw/pysquirrel/issues"
Changelog = "https://github.com/tsegaw/pysquirrel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pysquirrel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]
