[project]
name = "pysquirrel-demo"
version = "0.1.0"
description = "Demo FastAPI app showing pysquirrel in action."
requires-python = ">=3.10"

dependencies = [
    "fastapi >= 0.110",
    "uvicorn[standard] >= 0.29",
    "asyncpg >= 0.29",
    "pydantic >= 2.6",
]

[project.optional-dependencies]
dev = [
    "pysquirrel",
    "httpx >= 0.27",
    "pytest >= 8.0",
    "pytest-asyncio >= 0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
